# research-agent

./: .gitignore  api.py  main.py  pyproject.toml  pyrightconfig.json
src/research_agent/: core.py  tools.py
