[project]
name = "research-agent"
version = "0.1.0"
description = ""
authors = [{ name = "anjanah07", email = "thanjana7@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai (>=2.14.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
]

[tool.poetry]
packages = [{ include = "research_agent", from = "src" }]

[tool.poetry.dependencies]
python = "^3.14"
openai = ">=2.14.0,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
duckduckgo-search = ">=8.1.1,<9.0.0"
rich = ">=14.2.0,<15.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
